--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/img/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneaker</title>
+    <title>SNEAKERS</title>
+    <meta name="description" content="Welcome to our online sneaker emporium! Discover the finest selection of top-quality sneakers at unbeatable prices. Find your perfect pair and step up your style game with the best deals on the market.">
   </head>
   <body>
     <div id="app"></div>
